# DrugClaw

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CNAME  Cargo.toml  DEVELOP.md  Dockerfile  LICENSE  NIXPKGS_README.md  README.md  README_CN.md  SOUL.md  TEST.md  check.sh  deploy.sh  disclaimer.html  docker-compose.yaml  drugclaw.config.example.yaml  flake.nix  index.html  install.ps1  install.sh  privacy-policy.html  start.sh  terms-of-service.html  uninstall.ps1  uninstall.sh
.github/workflows/: ci.yml  release-assets.yml
crates/drugclaw-clawhub/: Cargo.toml
crates/drugclaw-clawhub/src/: client.rs  install.rs  lockfile.rs
crates/drugclaw-core/: Cargo.toml
crates/drugclaw-core/src/: error.rs  lib.rs
css/: legal.css  style.css
docker/: drug-sandbox-docking.Dockerfile  drug-sandbox.Dockerfile  requirements-docking.txt  requirements-science.txt
docs/: mcp-sdk-evaluation.md
gui/: README.md  REDESIGN.md  index.html  package-lock.json  package.json  tailwind.config.js
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/src/: main.rs
js/: main.js
scripts/: matrix-smoke-test.sh  release_finalize.sh  release_homebrew.sh  test_http_hooks.sh  update-nixpkgs.sh
src/: acp.rs  agent_engine.rs  chat_commands.rs  codex_auth.rs  config.rs  doctor.rs  gateway.rs  hooks.rs  http_client.rs  lib.rs  llm.rs  main.rs  mcp.rs  memory_backend.rs  memory_service.rs  otlp.rs  plugins.rs  runtime.rs  scheduler.rs  setup.rs  skills.rs  web.rs
tests/: config_validation.rs  db_integration.rs  tool_permissions.rs
web/: index.html  package-lock.json  package.json
(+173 files in other folders)
