[package]
name = "drugclaw-clawhub"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
drugclaw-core = { path = "../drugclaw-core" }
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
zip = "2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }
