[package]
name = "drugclaw-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
