[package]
name = "drugclaw-tauri"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["io-util", "process", "rt-multi-thread", "sync"] }

[workspace]
